# specta

./: .gitignore  .rustfmt.toml  AGENTS.md  ATTRIBUTE_SYSTEM_REVIEW.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  PLAN.md  README.md  TODO  brother.rs  bruh.ts  publish.sh
cli/: Cargo.toml  debug.rs
cli/example/: Cargo.toml
cli/src/: main.rs
cli/tests/: test.rs
crates/util/: Cargo.toml
examples/: Cargo.toml  basic.rs  datatype.rs  debug.rs  demo.rs  demo2.rs  export.rs  functions.rs  type_collection.rs
examples/basic-ts/: Cargo.toml
examples/collect/: Cargo.toml
examples/examples/: basic.rs  datatype.rs  export.rs  type_collection.rs
examples/scratchpad/: Cargo.toml
examples/selection-no-direct-deps/: Cargo.toml
examples/specta_crate_bin/: Cargo.toml
examples/src/: lib.rs
macros/: Cargo.toml
macros/src/: fn_datatype.rs  internal_fn_datatype.rs  lib.rs  specta.rs  utils.rs
specta/: Cargo.toml  build.rs
specta-csharp/: Cargo.toml
specta-csharp/src/: error.rs  lib.rs  primitives.rs  render.rs
specta-datatype-from/: Cargo.toml
specta-datatype-from/src/: lib.rs  utils.rs
specta-datatype-from/tests/: datatype.rs
specta-go/: Cargo.toml  bindings.go
specta-go/src/: compat.rs  config.rs  error.rs  go.rs  lib.rs  primitives.rs  reserved_names.rs
specta-jsdoc/: Cargo.toml
specta-jsdoc/src/: lib.rs
specta-jsonschema/: Cargo.toml
specta-jsonschema/examples/: basic.rs  jsonschema.rs
specta-jsonschema/src/: error.rs  exporter.rs  import.rs  json_schema.rs  jsonschema.rs  layout.rs  lib.rs  primitives.rs  render.rs  schema_version.rs
specta-jsonschema/tests/: basic.rs  export.rs
specta-kotlin/: Cargo.toml
specta-kotlin/src/: error.rs  kotlin.rs  lib.rs  render.rs  reserved_names.rs
specta-macros/: Cargo.toml
specta-macros/src/: lib.rs  specta.rs  utils.rs
specta-openapi/: Cargo.toml
specta-openapi/src/: error.rs  lib.rs  openapi.rs  operation.rs  paths.rs  resolve.rs  transform.rs
specta-python/: Cargo.toml  README.md
specta-python/src/: error.rs  exporter.rs  lib.rs  opaque.rs  primitives.rs  reserved_names.rs  types.rs
specta-rescript/: Cargo.toml  README.md
specta-rescript/examples/: README.md  basic_types.rs  comments_example.rs  comprehensive_demo.rs  generics.rs  recursive.rs  result_types.rs  simple_usage.rs  variants.rs
specta-rescript/src/: error.rs  lib.rs  primitives.rs  rescript.rs  toposort.rs
specta-rescript/tests/: basic.rs  examples.rs
specta-rust/: Cargo.toml
specta-rust/src/: error.rs  exporter.rs  lib.rs
specta-serde/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
specta-serde/examples/: both_mode_demo.rs  comprehensive_serde_attrs.rs  field_skip_demo.rs  hello.rs  into_phases_demo.rs  new_api_demo.rs  serde_transformations.rs
specta-serde/src/: apply.rs  compat.rs  error.rs  inflection.rs  lib.rs  parser.rs  phased.rs  repr.rs  serde_attrs.rs  validate.rs
specta-serde/tests/: integration.rs
specta-swift/: Cargo.toml  CommentsExample.swift  CriticalFixesDemo.swift  CustomTypes.swift  PLAN.md  README.md  SimpleTypes.swift  Types.swift
specta-swift/examples/: README.md  advanced_unions.rs  basic_types.rs  comments_example.rs  complex_types.rs  comprehensive_demo.rs  configuration_options.rs  critical_fixes_demo.rs  simple_usage.rs  special_types.rs  string_enums.rs
specta-swift/src/: error.rs  lib.rs  primitives.rs  swift.rs
specta-swift/tests/: Cargo.toml  advanced_unions.rs  basic.rs  common_types.rs  comprehensive.rs  critical_issues.rs  multiline_comments.rs  string_enum_implementation.rs  string_enum_issue.rs  string_enum_test.rs  struct_reuse_test.rs  struct_variants.rs  unions.rs  uuid_simple.rs  uuid_test.rs
specta-tags/: Cargo.toml
specta-tags/example/: tags.rs
specta-tags/examples/: tags.rs  tags2.rs
specta-tags/src/: lib.rs  v1.rs  v2.rs
specta-typescipt/: Cargo.toml
specta-typescipt/src/: comments.rs  lib.rs
specta-typescript/: Cargo.toml  bindings.ts
specta-typescript/examples/: basic.rs  branded.rs  branded_type_impl.rs  brendan.rs  debug.rs  debug_serde.rs  dev.rs  export.rs  framework.rs  generics.rs  generics2.rs  generics3.rs  generics44.rs  hardmode.rs  maybe_undefined.rs  phase_symbol.rs  serde_integration.rs  testing.rs  typescript.rs
specta-typescript/src/: branded.rs  comments.rs  compat.rs  constants.rs  context.rs  define.rs  error.rs  export_config.rs  exporter.rs  formatter.rs  function.rs  inline.rs  js_doc.rs  jsdoc.rs  legacy.rs  lib.rs  map_keys.rs  opaque.rs  primitives.rs  references.rs  reserved_names.rs  rich_types.rs  semantic.rs  serde.rs  static_types.rs  types.rs  typescript.rs  utils.rs
specta-typescript/tests/: js_doc.rs  typescript.rs
specta-util/: Cargo.toml
specta-util/examples/: export.rs
specta-util/src/: array.rs  export.rs  json.rs  lib.rs  remap.rs  remapper.rs  selection.rs  static_types.rs  ty.rs  type_collection.rs
specta-zod/: Cargo.toml
specta-zod/src/: compat.rs  context.rs  error.rs  export_config.rs  lib.rs  map_keys.rs  opaque.rs  primitives.rs  references.rs  reserved_names.rs  types.rs  zod.rs
specta-zod/tests/: lib.rs
specta/examples/: attrs.rs  library.rs  references.rs  skip_attr_test.rs
specta/src/: builder.rs  collect.rs  datatype.rs  docs.md  error.rs  export.rs  format.rs  function.rs  internal.rs  json.rs  language.rs  lib.rs  serde.rs  specta_id.rs  type.rs  type_collection.rs  type_map.rs  types.rs
specta/tests/: attribute_parsing.rs  duplicate_ty_name.rs  functions.rs  remote_impls.rs  reserved_keywords.rs  ts.rs  type_collection.rs
src/: docs.md  (+11 more)
tests/: Cargo.toml  advanced_types.rs  bigints.rs  comments.rs  const_types.rs  datatype.rs  deprecated.rs  duplicate_ty_name.rs  export.rs  flatten_and_inline.rs  functions.rs  json.rs  lib.rs  macro_decls.rs  map_keys.rs  recursive.rs  remote_impls.rs  rename.rs  reserved_keywords.rs  selection.rs  serde.rs  sid.rs  static_types.rs  transparent.rs  ts.rs  ty_override.rs  type_collection.rs  type_map.rs  typescript.rs
tests/examples/: valibot_typecheck.rs  zod_typecheck.rs
tests/macro/: compile_error.rs  compile_error.stderr
(+648 files in other folders)
