[package]
name = "specta-cli"
version = "0.0.0"
edition = "2021"
publish = false     # TODO

[dependencies]
specta = { path = "../", features = ["typescript"] }               # TODO: Remove `ts`, it's just for testing
specta-macros-support = { path = "../macros-support" }
clap = { version = "4.4.11", features = ["derive"] }
quote = "1.0.23"
proc-macro2 = "1.0.49"
syn = { version = "1.0.107", features = ["full", "extra-traits"] }
nanoid = "0.4.0"
