[package]
name = "specta-macros"
description = "Macros for specta. Don't use directly!"
version = "2.0.0-rc.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/specta"
documentation = "https://docs.rs/specta/latest/specta"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

[features]
serde = []
functions = []
export = []

[lib]
proc-macro = true

[dependencies]
Inflector = { version = "0.11.4", default-features = false }
itertools = "0.10.5"
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }
