[package]
name = "specta-datatype-from"
description = "Dynamically construct types with Specta"
version = "0.0.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/specta"
documentation = "https://docs.rs/specta/latest/specta"
keywords = ["async", "specta", "typesafe"]
categories = ["web-programming", "asynchronous"]

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.70", default-features = false, features = [] }
Inflector = { version = "0.11.4", default-features = false }
