[package]
name = "specta-go"
description = "Export your Rust types to Go"
version = "0.0.4"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/specta-rs/specta"
documentation = "https://docs.rs/specta-go/latest/specta-go"
keywords = ["async", "specta", "rspc", "go", "typesafe"]
categories = ["web-programming", "asynchronous"]
readme = "../README.md"

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
specta = { version = "=2.0.0-rc.26", path = "../specta" }
unicode-general-category = "1.1.0"

[dev-dependencies]
specta = { version = "=2.0.0-rc.26", path = "../specta", features = ["derive", "collect"] }
specta_serde = { package = "specta-serde", version = "=0.0.13", path = "../specta-serde" }
