[package]
name = "specta-jsdoc"
description = "Export your Rust types to JSDoc"
version = "0.0.8"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/specta"
documentation = "https://docs.rs/specta-jsdoc/latest/specta-jsdoc"
keywords = ["async", "specta", "jsdoc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[lints]
workspace = true

[dependencies]
specta = { version = "=2.0.0-rc.21", path = "../specta" }
specta-typescript = { version = "=0.0.8", path = "../specta-typescript" }
# TODO: Don't depend on serde
specta-serde = { version = "=0.0.8", path = "../specta-serde" }
