[package]
name = "specta-jsonschema"
description = "Export your Rust types to a JSON Schema"
version = "0.0.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/specta"
documentation = "https://docs.rs/specta-jsonschema/latest/specta-jsonschema"
keywords = ["async", "specta", "rspc", "jsonschema", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
specta = { path = "../specta" }
schemars = { version = "1.1", default-features = false, features = [] }
Inflector = "0.11.4"
