[package]
name = "specta-jsonschema"
description = "Export your Rust types to a JSON Schema"
version = "0.0.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/oscartbeaumont/specta"
documentation = "https://docs.rs/specta-jsonschema/latest/specta-jsonschema"
keywords = ["async", "specta", "rspc", "jsonschema", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
specta = { path = "../specta" }
schemars = { version = "0.8.22", default-features = false, features = [] } # TODO: move to something else or v1
Inflector = "0.11.4"
