[package]
name = "specta-macros"
description = "Macros for specta. Don't use directly!"
version = "2.0.0-rc.16"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/specta"
documentation = "https://docs.rs/specta/latest/specta"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

[lib]
proc-macro = true

[features]
default = []
# These will be enabled by `specta` or `specta-util` automatically as required. They depend on certain exports of it so enabling them manually is not useful.
DO_NOT_USE_export = []
DO_NOT_USE_function = []

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.70", features = ["full"] }  # TODO: default-features = false,
Inflector = { version = "0.11.4", default-features = false }
