[package]
name = "specta-macros"
description = "Macros for specta. Don't use directly!"
version = "2.0.0-rc.18"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/specta"
documentation = "https://docs.rs/specta/latest/specta"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

[lib]
proc-macro = true

[features]
default = []
# These will be enabled by `specta` or `specta-util` automatically as required. They depend on certain exports of it so enabling them manually is not useful.
DO_NOT_USE_collect = []
DO_NOT_USE_function = []

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }  # TODO: default-features = false,
Inflector = { version = "0.11.4", default-features = false }
