[package]
name = "specta-macros"
description = "Macros for specta. Don't use directly!"
version = "2.0.0-rc.24"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/specta-rs/specta"
documentation = "https://docs.rs/specta/latest/specta"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

[lib]
proc-macro = true

[features]
default = []
serde = []
# These will be enabled by `specta` or `specta-util` automatically as required. They depend on certain exports of it so enabling them manually is not useful.
DO_NOT_USE_collect = []
DO_NOT_USE_function = ["syn/full"]

[lints]
workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false, features = [
  "clone-impls",
  "derive",
  "parsing",
  "printing",
  "proc-macro",
  "visit",
  "visit-mut",
] }
Inflector = { version = "0.11", default-features = false }
