[package]
name = "specta-openapi"
description = "Export your Rust types to OpenAPI"
version = "0.0.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/specta-rs/specta"
documentation = "https://docs.rs/specta-zod/latest/specta-zod"
keywords = ["async", "specta", "rspc", "openapi", "typesafe"]
categories = ["web-programming", "asynchronous"]
readme = "../README.md"

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
specta = { path = "../specta" }
openapiv3 = { version = "2.2.0", default-features = false, features = [] }
