[package]
name = "specta-openapi"
description = "Export your Rust types to OpenAPI"
version = "0.0.4"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/specta-rs/specta"
documentation = "https://docs.rs/specta-openapi/latest/specta-openapi"
keywords = ["async", "specta", "rspc", "openapi", "typesafe"]
categories = ["web-programming", "asynchronous"]
readme = "../README.md"

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
specta = { version = "=2.0.0-rc.26", path = "../specta" }
specta-jsonschema = { version = "=0.0.4", path = "../specta-jsonschema" }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
specta = { version = "=2.0.0-rc.26", path = "../specta", features = ["derive"] }
specta-serde = { path = "../specta-serde" }
