[package]
name = "specta-python"
description = "Export your Rust types to Python"
version = "0.0.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/specta-rs/specta"
documentation = "https://docs.rs/specta-python/latest/specta-python"
keywords = ["specta", "python", "typesafe", "typing", "codegen"]
categories = ["development-tools"]
readme = "README.md"

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
specta = { version = "=2.0.0-rc.26", path = "../specta" }
serde = { version = "1", default-features = false, optional = true }
unicode-ident = "1"
unicode-normalization = "0.1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
specta = { version = "=2.0.0-rc.26", path = "../specta", features = ["derive", "collect"] }
specta-serde = { path = "../specta-serde" }
