[package]
name = "specta-rescript"
description = "Export your Rust types to ReScript"
version = "0.0.1"
authors = ["Rory Finnegan <rory@rofinn.dev>", "Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/specta-rs/specta"
documentation = "https://docs.rs/specta-rescript/latest/specta-rescript"
keywords = ["specta", "rescript", "typesafe"]
categories = ["web-programming"]
readme = "README.md"

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
specta = { version = "=2.0.0-rc.26", path = "../specta", features = ["derive"] }
specta-serde = { version = "=0.0.13", path = "../specta-serde" }
thiserror = "2.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[[example]]
name = "rescript_simple_usage"
path = "examples/simple_usage.rs"

[[example]]
name = "rescript_basic_types"
path = "examples/basic_types.rs"

[[example]]
name = "rescript_variants"
path = "examples/variants.rs"


[[example]]
name = "rescript_result_types"
path = "examples/result_types.rs"


[[example]]
name = "rescript_generics"
path = "examples/generics.rs"

[[example]]
name = "rescript_comments_example"
path = "examples/comments_example.rs"

[[example]]
name = "rescript_comprehensive_demo"
path = "examples/comprehensive_demo.rs"

[[example]]
name = "rescript_recursive"
path = "examples/recursive.rs"
