[package]
name = "specta-serde"
description = "Serde support for Specta"
version = "0.0.10"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/specta-rs/specta"
documentation = "https://docs.rs/specta-zod/latest/specta-zod"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
specta = { version = "=2.0.0-rc.23", path = "../specta" }
specta-macros = { version = "=2.0.0-rc.23", path = "../specta-macros", features = ["serde"] }

[dev-dependencies]
specta = { version = "=2.0.0-rc.23", path = "../specta", features = ["derive"] }
