[package]
name = "specta-serde"
description = "Serde support for Specta"
version = "0.0.11"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/specta-rs/specta"
documentation = "https://docs.rs/specta-serde/latest/specta-serde"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
specta = { version = "=2.0.0-rc.24", path = "../specta" }
specta-macros = { version = "=2.0.0-rc.24", path = "../specta-macros", features = ["serde"] }

[dev-dependencies]
specta = { version = "=2.0.0-rc.24", path = "../specta", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
