[package]
name = "specta-swift"
description = "Export your Rust types to Swift"
version = "0.0.1"
authors = ["Jamie Pine <hello@jamiepine.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/specta"
documentation = "https://docs.rs/specta-zod/latest/specta-zod"
keywords = ["async", "specta", "rspc", "swift", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
specta = { path = "../specta", features = ["derive", "uuid", "chrono"] }
specta-serde = { path = "../specta-serde" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = "1.42"
trybuild = "1.0"
uuid = "1.12.1"
chrono = { version = "0.4.40", features = ["clock"] }
