[package]
name = "specta-swift"
description = "Export your Rust types to Swift"
version = "0.0.1"
authors = ["Jamie Pine <hello@jamiepine.com>", "Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/specta-rs/specta"
documentation = "https://docs.rs/specta-zod/latest/specta-zod"
keywords = ["async", "specta", "rspc", "swift", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
specta = { path = "../specta", features = ["derive", "uuid", "chrono"] }
specta-serde = { path = "../specta-serde" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = "1.42"
trybuild = "1.0"
uuid = "1.12.1"
chrono = { version = "0.4.40", features = ["clock"] }

[[example]]
name = "basic_types"
path = "examples/basic_types.rs"

[[example]]
name = "advanced_unions"
path = "examples/advanced_unions.rs"

[[example]]
name = "configuration_options"
path = "examples/configuration_options.rs"

[[example]]
name = "special_types"
path = "examples/special_types.rs"

[[example]]
name = "string_enums"
path = "examples/string_enums.rs"

[[example]]
name = "comprehensive_demo"
path = "examples/comprehensive_demo.rs"
