[package]
name = "specta-typescript"
description = "Export your Rust types to TypeScript"
version = "0.0.9"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/specta"
documentation = "https://docs.rs/specta-zod/latest/specta-zod"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = []
serde = ["dep:serde", "specta/serde"]

[dependencies]
specta = { version = "=2.0.0-rc.22", path = "../specta" }
specta-serde = { version = "=0.0.9", path = "../specta-serde" }
serde = { version = "1", default-features = false, optional = true }
serde_yaml = "0.9.34"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
specta = { version = "=2.0.0-rc.22", path = "../specta", features = ["derive", "collect"] }
specta-util = { path = "../specta-util", features = ["serde"] }
