[package]
name = "specta-typescript"
description = "Export your Rust types to TypeScript"
version = "0.0.11"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/specta-rs/specta"
documentation = "https://docs.rs/specta-typescript/latest/specta-typescript"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]
readme = "../README.md"

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = []

# Implement `serde::Serialize` and `serde::Deserialize` for Typescript-specific types (Any, Unknown, Never)
serde = ["dep:serde"]

[dependencies]
specta = { version = "=2.0.0-rc.24", path = "../specta" }
serde = { version = "1", default-features = false, optional = true }
specta-util = { version = "0.0.11", path = "../specta-util" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
specta = { version = "=2.0.0-rc.24", path = "../specta", features = ["derive", "collect"] }
specta-serde = { path = "../specta-serde" }
specta-util = { path = "../specta-util", features = ["serde"] }
