[package]
name = "specta-util"
description = "High-level utilities for working with Specta"
version = "0.0.4"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/specta"
documentation = "https://docs.rs/specta-util/latest/specta-util"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
## Support for collecting up a global type map
export = ["dep:ctor", "specta-macros/DO_NOT_USE_export"]

# TODO: Can we remove this?
serde = []

[lints]
workspace = true

[dependencies]
specta = { version = "=2.0.0-rc.17", path = "../specta" }
specta-macros = { version = "=2.0.0-rc.17", path = "../specta-macros", default-features = false, optional = true }
ctor = { version = "0.2.8", default-features = false, optional = true }
serde = "1.0.204"  # TODO: Can we remove this or at least make it optional behind the `serde` flag
