[package]
name = "specta-util"
description = "High-level utilities for working with Specta"
version = "0.0.8"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/specta"
documentation = "https://docs.rs/specta-util/latest/specta-util"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

# TODO: Can we remove this?
serde = []

[lints]
workspace = true

[dependencies]
specta = { version = "=2.0.0-rc.21", path = "../specta" }
specta-macros = { version = "=2.0.0-rc.18", path = "../specta-macros", default-features = false, optional = true }
serde = "1.0.204"  # TODO: Can we remove this or at least make it optional behind the `serde` flag
